--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -311,11 +311,11 @@ l_english:
 		building_tec_biohive_imperial_capital_desc:0 "A Gargantuan organism serving as a direct manifestation of the ruling Hive Mind of the galaxy."
 	# /
 	# --------------- Anticrime
-		building_tec_hive_bio_sentinel_post_1:0 "Soothing Spire"
-		building_tec_hive_bio_sentinel_post_1_desc:0 "TO DO."
+		building_tec_biohive_anticrime_1:0 "Neutrophil Nodule"
+		building_tec_biohive_anticrime_1_desc:0 "TO DO."
 
-		building_tec_hive_bio_sentinel_post_2:0 "Soothing Megaspire"
-		building_tec_hive_bio_sentinel_post_2_desc:0 "TO DO."
+		building_tec_biohive_anticrime_2:0 "Neutrophil Spire"
+		building_tec_biohive_anticrime_2_desc:0 "TO DO."
 	# /
 	# --------------- Housing
 		building_tec_biohive_housing_1:0 "Bio Warren"
@@ -328,32 +328,40 @@ l_english:
 	# --------------- Amenities
 
 	# /
-	# --------------- Amenities
-		
+	# --------------- Utility
+		building_tec_biohive_resource_silo_1:0 "Accumulated Reserves"
+		building_tec_biohive_resource_silo_1_desc:0 "REPLACE_ME"
+		building_tec_biohive_resource_silo_2:0 "Protected Reserves"
+		building_tec_biohive_resource_silo_2_desc:0 "REPLACE_ME"
+		building_tec_biohive_resource_silo_3:0 "Metabolized"
+		building_tec_biohive_resource_silo_3_desc:0 "REPLACE_ME"
 	# /
 	# --------------- Menial
 	 # --------------- Menial Energy
-		building_tec_biohive_energrid_1:0 "REPLACE_ME"
+		building_tec_biohive_energrid_1:0 "Bio-Generator"
 		building_tec_biohive_energrid_1_desc:0 "REPLACE_ME"
-		building_tec_biohive_energrid_2:0 "REPLACE_ME"
+		building_tec_biohive_energrid_2:0 "Grown Bio-Generator"
 		building_tec_biohive_energrid_2_desc:0 "REPLACE_ME"
-		building_tec_biohive_energrid_3:0 "REPLACE_ME"
+		building_tec_biohive_energrid_3:0 "Mature Bio-Generator"
 		building_tec_biohive_energrid_3_desc:0 "REPLACE_ME"
 
-		building_tec_biohive_energy_grid:0 "REPLACE_ME"
+		building_tec_biohive_energy_grid:0 "Energy Nodule"
 		building_tec_biohive_energy_grid_desc:0 "REPLACE_ME"
-		building_tec_biohive_energy_nexus:0 "REPLACE_ME"
+		building_tec_biohive_energy_nexus:0 "Improved Energy Nodule"
 		building_tec_biohive_energy_nexus_desc:0 "REPLACE_ME"
-		building_tec_biohive_energy_complex:0 "REPLACE_ME"
+		building_tec_biohive_energy_complex:0 "Sentient Energy Nodule"
 		building_tec_biohive_energy_complex_desc:0 "REPLACE_ME"
 	 # /
 	 # --------------- Menial Minerals
-		building_tec_biohive_stripmine_1:0 "Excavation Tendrils"
+		building_tec_biohive_stripmine_1:0 "Mining Tendrils"
 		building_tec_biohive_stripmine_1_desc:0 "Deep and wide do these tendrils go into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
-		building_tec_biohive_stripmine_2:0 "Drilling Tendrils"
+		building_tec_biohive_stripmine_1_desc_hab:0 "Deep and wide do these tendrils go into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
+		building_tec_biohive_stripmine_2:0 "Excavation Tendrils"
 		building_tec_biohive_stripmine_2_desc:0 "Deep and wide do these tendrils go into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
+		building_tec_biohive_stripmine_2_desc_hab:0 "Deep and wide do these tendrils go into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
 		building_tec_biohive_stripmine_3:0 "Ravaging Tendrils"
 		building_tec_biohive_stripmine_3_desc:0 "Deep and wide do these tendrils go deep into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
+		building_tec_biohive_stripmine_3_desc_hab:0 "Deep and wide do these tendrils go deep into mineral amalgams for obtaining rich resources and harvest necessary energy for the development of the mergaorganism that grows it."
 
 		building_tec_biohive_mineral_purification_plant:0 "Geothermal Amasser"
 		building_tec_biohive_mineral_purification_plant_desc:0 "Enormous organism fed by planetary tendrils and drones with raw materials, processing raw materials and energy into useful more streamlined resources."
@@ -372,47 +380,62 @@ l_english:
 
 		building_tec_biohive_food_processing_facility:0 "Biogerminator"
 		building_tec_biohive_food_processing_facility_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a small but effective scale."
-		building_tec_biohive_food_processing_3:0 "Advanced Biogerminator"
-		building_tec_biohive_food_processing_3_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a regional scale."
-		building_tec_biohive_food_processing_3:0 "Planetary Germinator"
-		building_tec_biohive_food_processing_3_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a whole planetary scale."
+		building_tec_biohive_food_processing_center:0 "Advanced Biogerminator"
+		building_tec_biohive_food_processing_center_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a regional scale."
+		building_tec_biohive_food_processing_complex:0 "Planetary Germinator"
+		building_tec_biohive_food_processing_complex_desc:0 "Special megaorganisms dedicated to accelerate the growth of biological matter to be harvested as usable biomatter at a whole planetary scale."
 	 # /
 	# /
 	# --------------- Research
-		building_tec_biohive_research_lab_1:0 "Neuromorph Offspring"
+		building_tec_biohive_research_lab_1:0 "Neuromorph"
 		building_tec_biohive_research_lab_1_desc:0 "A."
-		building_tec_biohive_research_lab_2:0 "Mature Neuromorph"
+		building_tec_biohive_research_lab_2:0 "Elevated Neuromorph"
 		building_tec_biohive_research_lab_2_desc:0 "A."
 		building_tec_biohive_research_lab_3:0 "Sentient Neuromorph"
 		building_tec_biohive_research_lab_3_desc:0 "A."
 
-		building_tec_biohive_science_1:0 "Planetary Bio-Brain"
-		building_tec_biohive_science_1_desc:0 "A."
+		building_tec_biohive_research_booster_1:0 "Planetary Bio-Brain"
+		building_tec_biohive_research_booster_1_desc:0 "A."
 
 		building_tec_biohive_science_2:0 "Sentient Bio-Brain"
-		building_tec_biohive_science_2_desc:0 "A."		
+		building_tec_biohive_science_2_desc:0 "A."
 	# /
 	# --------------- Unity
-		building_tec_biohive_unity_1:0 "Unitary Dendrites"
-		building_tec_biohive_unity_1_desc:0 "A."
-		building_tec_biohive_unity_2:0 "Amplified Dendrites"
-		building_tec_biohive_unity_2_desc:0 "A."
-		building_tec_biohive_unity_3:0 "Sentient Dendrites"
-		building_tec_biohive_unity_3_desc:0 "A."
+		# Unity normal building
+		building_tec_biohive_node:0 "Dendrite Node"
+		building_tec_biohive_node_desc:0 "TO_DO_WIP"
+		building_tec_biohive_cluster:0 "Dendrite Cluster"
+		building_tec_biohive_cluster_desc:0 "TO_DO_WIP"
+		building_tec_biohive_confluence:0 "Dendrite Amplifier"
+		building_tec_biohive_confluence_desc:0 "TO_DO_WIP"
+		# Unity booster
+		building_tec_biohive_relay_1:0 "Sensorial Neuro-Communicator"
+		building_tec_biohive_relay_1_desc:0 "TO_DO_WIP"
+		building_tec_biohive_relay_2:0 "Sensorial Neuro-Transmitter"
+		building_tec_biohive_relay_2_desc:0 "TO_DO_WIP"
+		building_tec_biohive_relay_3:0 "Sensorial Neuro-Converger"
+		building_tec_biohive_relay_3_desc:0 "TO_DO_WIP"
 
-		building_tec_biohive_unity_booster_1:0 "Evolution Chamber"
-		building_tec_biohive_unity_booster_1_desc:0 "A."
-		building_tec_biohive_unity_booster_2:0 "Evolution Nest"
-		building_tec_biohive_unity_booster_2_desc:0 "A."
-		building_tec_biohive_unity_booster_3:0 "Evolution Lair"
-		building_tec_biohive_unity_booster_3_desc:0 "A."		
+			job_tec_sensorial_drone:0 "Evolutionary Drone"
+			job_tec_sensorial_drone_plural:0 "Evolutionary Drones"
+			job_tec_sensorial_drone_desc:0 "Strand of genetic data after strand of genetic data, these drones are deeply focused on finding the perfect and most stable and specialized variants of drones suitable for the needs of the collective, and preserve the gestalt memory and unity deeply engraved in each one of them."
+			job_tec_sensorial_drone_effect_desc:0 "£job_tec_sensorial_drone£ $job_tec_sensorial_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!$tec_sensorial_drone_cleanup$ and §Y$tec_loc_amenities_gestalt$§!."
+			job_tec_sensorial_drone_effect_desc_civic:0 "£job_tec_sensorial_drone£ $job_tec_sensorial_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, bonuses based on the gestalt §YMotivations§! and §Y$tec_loc_amenities_gestalt$§!."
+			mod_job_tec_sensorial_drone_add:0 "$job_tec_sensorial_drone$ Jobs"
+			mod_job_tec_sensorial_drone_per_pop:0 "§G+1§! $job_tec_sensorial_drone$ Job per $VALUE$ Pops"
+			mod_job_tec_sensorial_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_sensorial_drone_add£ per $VALUE$ £pop£"
 
-		building_tec_biohive_evolution_1:0 "Evolution Chamber"
-		building_tec_biohive_evolution_1_desc:0 "A."
-		building_tec_biohive_evolution_2:0 "Evolution Nest"
-		building_tec_biohive_evolution_2_desc:0 "A."
-		building_tec_biohive_evolution_3:0 "Evolution Lair"
-		building_tec_biohive_evolution_3_desc:0 "A."		
+		building_tec_biohive_amplifier:0 "Evolution Chamber"
+		building_tec_biohive_amplifier_desc:0 "A."
+
+			job_tec_bioevolution_drone:0 "Evolutionary Drone"
+			job_tec_bioevolution_drone_plural:0 "Evolutionary Drones"
+			job_tec_bioevolution_drone_desc:0 "Strand of genetic data after strand of genetic data, these drones are deeply focused on finding the perfect and most stable and specialized variants of drones suitable for the needs of the collective, and preserve the gestalt memory and unity deeply engraved in each one of them."
+			job_tec_bioevolution_drone_effect_desc:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!$tec_bioevolution_drone_cleanup$ and §Y$tec_loc_amenities_gestalt$§!."
+			job_tec_bioevolution_drone_effect_desc_civic:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, bonuses based on the gestalt §YMotivations§! and §Y$tec_loc_amenities_gestalt$§!."
+			mod_job_tec_bioevolution_drone_add:0 "$job_tec_bioevolution_drone$ Jobs"
+			mod_job_tec_bioevolution_drone_per_pop:0 "§G+1§! $job_tec_bioevolution_drone$ Job per $VALUE$ Pops"
+			mod_job_tec_bioevolution_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_bioevolution_drone_add£ per $VALUE$ £pop£"
 	# /
 	# --------------- Industrial
 		building_tec_biohive_foundry_1:0 "Bioalloys Refiner"
@@ -421,14 +444,62 @@ l_english:
 		building_tec_biohive_foundry_2_desc:0 "Specific biomorph dedicated to improve the quality and hardness of bioalloys produced via biomatter metamorphosis and calcification in enormous quantities."
 		building_tec_biohive_foundry_3:0 "Bioalloys Amasser"
 		building_tec_biohive_foundry_3_desc:0 "Specific biomorph dedicated to improve the quality and hardness of bioalloys produced via biomatter metamorphosis and calcification in unfathomable quantities."
+
+		building_tec_biohive_factory_1:0 "Industrial Organs"
+		building_tec_biohive_factory_1_desc:0 ""
+		building_tec_biohive_factory_2:0 "Fabricator Organs"
+		building_tec_biohive_factory_2_desc:0 ""
+		building_tec_biohive_factory_3:0 "Replicator Organs"
+		building_tec_biohive_factory_3_desc:0 ""
+
+		building_tec_biohive_industrial_booster:0 "Industrial Neuro-Gland"
+		building_tec_biohive_industrial_booster_desc:0 ""
+
+		building_tec_biohive_strategic_booster:0 "Strategic Cerebellum"
+		building_tec_biohive_strategic_booster_desc:0 ""
 	# /
-	# --------------- Naval
-		building_tec_biohive_fortress_1:0 "Drone Stronghold"
-		building_tec_biohive_fortress_1_desc:0 "Calcified layers of biomatter conforms a truly respectable point of defense in this planet, reinforcing the planetary integrity and safety."
-		building_tec_biohive_fortress_2:0 "Drone Fortress"
-		building_tec_biohive_fortress_2_desc:0 "Calcified layers of biomatter conforms a truly respectable point of defense in this planet, reinforcing the planetary integrity and safety and emitting disarray signals to disarray enemy fleets."
-		building_tec_biohive_fortress_3:0 "Drone Bastion"
-		building_tec_biohive_fortress_3_desc:0 "Calcified layers of biomatter conforms diverse respectable points of defense in this planet, reinforcing the planetary integrity and safety and emitting disarray signals to disarray enemy fleets."
+	# --------------- Rare resources
+		building_tec_biohive_chemical_plant_1:0 "Chemical Cyst"
+		building_tec_biohive_chemical_plant_1_desc:0 ""
+		building_tec_biohive_chemical_plant_2:0 "Chemical Outgrow"
+		building_tec_biohive_chemical_plant_2_desc:0 ""
+		building_tec_biohive_chemical_plant_3:0 "Chemical Amalgam"
+		building_tec_biohive_chemical_plant_3_desc:0 ""
+
+		building_tec_biohive_refinery_1:0 "Gaseous Breather"
+		building_tec_biohive_refinery_1_desc:0 ""
+		building_tec_biohive_refinery_2:0 "Gaseous Expeller"
+		building_tec_biohive_refinery_2_desc:0 ""
+		building_tec_biohive_refinery_3:0 "Gaseous Polluter"
+		building_tec_biohive_refinery_3_desc:0 ""
+
+		building_tec_biohive_crystal_plant_1:0 "Crystal Cyst"
+		building_tec_biohive_crystal_plant_1_desc:0 ""
+		building_tec_biohive_crystal_plant_2:0 "Crystal Vesicle"
+		building_tec_biohive_crystal_plant_2_desc:0 ""
+		building_tec_biohive_crystal_plant_3:0 "Crystal Bladder"
+		building_tec_biohive_crystal_plant_3_desc:0 ""
+	# /
+	# --------------- Rare deposits
+		building_tec_biohive_mote_harvesters:0 "Mote Collector"
+		building_tec_biohive_mote_harvesters_desc:0 ""
+
+		building_tec_biohive_gas_extractors:0 "Gas Vents"
+		building_tec_biohive_gas_extractors_desc:0 ""
+
+		building_tec_biohive_crystal_mines:0 "Crystal Excavators"
+		building_tec_biohive_crystal_mines_desc:0 ""
+
+		building_tec_biohive_betharian_power_plant:0 "Betharian Nodule"
+		building_tec_biohive_betharian_power_plant_desc:0 ""
+	# /
+	# --------------- Military/Naval
+		building_tec_biohive_stronghold:0 "Drone Stronghold"
+		building_tec_biohive_stronghold_desc:0 "Calcified layers of biomatter conforms a truly respectable point of defense in this planet, reinforcing the planetary integrity and safety."
+		building_tec_biohive_fortress:0 "Drone Fortress"
+		building_tec_biohive_fortress_desc:0 "Calcified layers of biomatter conforms a truly respectable point of defense in this planet, reinforcing the planetary integrity and safety and emitting disarray signals to disarray enemy fleets."
+		building_tec_biohive_bastion:0 "Drone Bastion"
+		building_tec_biohive_bastion_desc:0 "Calcified layers of biomatter conforms diverse respectable points of defense in this planet, reinforcing the planetary integrity and safety and emitting disarray signals to disarray enemy fleets."
 		
 		building_tec_naval_biohive_1:0 "Naval Transmitter"
 		building_tec_naval_biohive_1_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators."
@@ -436,6 +507,10 @@ l_english:
 		building_tec_naval_biohive_2_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators, over entire systems."
 		building_tec_naval_biohive_3:0 "Naval Relay"
 		building_tec_naval_biohive_3_desc:0 "Coordinated with the rest of neural web of this planet, this organism emits and receives a pseudo-psionic signal to increase the control over larger naval bioforms, using the smaller swarm bioforms as resonators."
+
+		building_tec_biohive_military:0 "Lymphatic Accelerator"
+		building_tec_biohive_military_desc:0 "A"
+
 	# /
 	# --------------- Jobs
 		job_tec_podtender_drone:0 "Podtender Drone"
@@ -487,29 +562,6 @@ l_english:
 		job_tec_reservoir_drone_effect_desc:0 "£job_tec_reservoir_drone£ $job_tec_reservoir_drone_plural$ generates "
 		mod_job_tec_reservoir_drone_add:0 "$job_tec_reservoir_drone$ Jobs"
 
-		# Unity normal building
-		building_tec_biohive_node:0 "Dendrite Node"
-		building_tec_biohive_node_desc:0 "TO_DO_WIP"
-		building_tec_biohive_cluster:0 "Dendrite Cluster"
-		building_tec_biohive_cluster_desc:0 "TO_DO_WIP"
-		building_tec_biohive_confluence:0 "Dendrite Amalgam"
-		building_tec_biohive_confluence_desc:0 "TO_DO_WIP"
-		# Unity booster
-		building_tec_biohive_relay_1:0 "Evolution Den"
-		building_tec_biohive_relay_1_desc:0 "TO_DO_WIP"
-		building_tec_biohive_relay_2:0 "Evolution Chamber"
-		building_tec_biohive_relay_2_desc:0 "TO_DO_WIP"
-		building_tec_biohive_relay_3:0 "Evolution Lair"
-		building_tec_biohive_relay_3_desc:0 "TO_DO_WIP"
-
-		job_tec_bioevolution_drone:0 "Evolutionary Drone"
-		job_tec_bioevolution_drone_plural:0 "Evolutionary Drones"
-		job_tec_bioevolution_drone_desc:0 "Strand of genetic data after strand of genetic data, these drones are deeply focused on finding the perfect and most stable and specialized variants of drones suitable for the needs of the collective, and preserve the gestalt memory and unity deeply engraved in each one of them."
-		job_tec_bioevolution_drone_effect_desc:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!$tec_bioevolution_drone_cleanup$ and §Y$tec_loc_amenities_gestalt$§!."
-		job_tec_bioevolution_drone_effect_desc_civic:0 "£job_tec_bioevolution_drone£ $job_tec_bioevolution_drone_plural$ turn §Y$tec_loc_energy$§! into §Y$tec_loc_unity$§!, bonuses based on the gestalt §YMotivations§! and §Y$tec_loc_amenities_gestalt$§!."
-		mod_job_tec_bioevolution_drone_add:0 "$job_tec_bioevolution_drone$ Jobs"
-		mod_job_tec_bioevolution_drone_per_pop:0 "§G+1§! $job_tec_bioevolution_drone$ Job per $VALUE$ Pops"
-		mod_job_tec_bioevolution_drone_per_pop_short:0 "\n§G+1§! £mod_job_tec_bioevolution_drone_add£ per $VALUE$ £pop£"
 
 		# Spawning pool
 		building_tec_biohive_spawning_pool_1:0 "Spawning Pool"
